--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
         "port": "3001"
     },
     "backbone": {
-        "rootDirectory": "backbone-spa-ui"
+        "rootDirectory": "backbone-spa-ui",
+        "staticPath": "backbone-spa-ui/static"
     }
 }
