--- a/backbone-spa-ui/package.json
+++ b/backbone-spa-ui/package.json
@@ -6,10 +6,12 @@
   "license": "ISC",
   "dependencies": {
     "backbone": "^1.2.3",
+    "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.3.6",
     "bootstrap-sass-loader": "^1.0.10",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "jquery": "^2.2.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
