--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     },
     "backbone": {
         "rootDirectory": "backbone-spa-ui",
-        "staticPath": "backbone-spa-ui/static"
+        "staticPath": "backbone-spa-ui/static",
+        "bundlePath": "backbone-spa-ui/build/scripts"
     }
 }
