--- a/backbone-spa-ui/package.json
+++ b/backbone-spa-ui/package.json
@@ -10,16 +10,17 @@
     "bootstrap-sass": "^3.3.6",
     "bootstrap-sass-loader": "^1.0.10",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "jquery": "^2.2.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "tpl": "^0.3.0",
+    "tpl-loader": "^0.2.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "tpl": "^0.3.0",
-    "tpl-loader": "^0.2.1"
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "webpack": "^1.12.14"
