--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "backbone-spa",
-  "version": "0.0.1",
-  "description": "Sample Backbone application with Karma tests",
-  "main": "app.js",
-  "private": true,
-  "scripts": {
-    "npm start": "node app"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/f3arnil/backbone-spa.git"
-  },
-  "author": "Alex Vasilyeu",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/f3arnil/backbone-spa/issues"
-  },
-  "homepage": "https://github.com/f3arnil/backbone-spa#readme",
-  "dependencies": {
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "path": "^0.12.7"
-  }
+    "name": "backbone-spa",
+    "version": "0.0.1",
+    "description": "Sample Backbone application with Karma tests",
+    "main": "app.js",
+    "private": true,
+    "scripts": {
+        "npm start": "node app"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/f3arnil/backbone-spa.git"
+    },
+    "author": "Alex Vasilyeu",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.13.4",
+        "extract-text-webpack-plugin": "^1.0.1",
+        "path": "^0.12.7",
+        "mongoose": "4.2.x",
+        "mongoose-unique-validator": "*"
+    },
+    "bugs": {
+        "url": "https://github.com/f3arnil/backbone-spa/issues"
+    },
+    "homepage": "https://github.com/f3arnil/backbone-spa#readme"
 }
