--- a/backbone-spa-ui/package.json
+++ b/backbone-spa-ui/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "sidr": "^2.2.1",
     "tpl": "^0.3.0",
     "tpl-loader": "^0.2.1",
     "underscore": "^1.8.3",
